added functionality and styling to the page, will be just a template for future business

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 
-    <title>Nus Agency</title>
+    <title>(Any) Agency</title>
 </head>
 <body>
     <header>
         <div class="container">
             <nav class="navbar">
-                <a href="index.html" class="brand">Nus Agency</a>
+                <a href="index.html" class="brand">(Any) Agency</a>
                 <ul class="menu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Features</a></li>
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <div class="banner">
-                    <img src="./image/office.jpg" alt="">
+                    <img src="./images/office.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -90,11 +90,11 @@
 
             <!-- card 1 -->
             <div class="card">
-                <img src="./image/office2.jpg" alt="">
+                <img src="./images/office2.jpg" alt="">
                 <div class="card-text">
                     <h3>Analytics</h3>
                     <p>
-                        Our team of experts at Prodigy Agency work together to provide you with the catalyst your brand needs to succeed in today's market.
+                        Our team of experts at (Any) Agency work together to provide you with the catalyst your brand needs to succeed in today's market.
                     </p>
                     <a href="#">
                         Learn More
@@ -105,11 +105,11 @@
 
             <!-- card 2 -->
             <div class="card">
-                <img src="./image/office3.jpg" alt="">
+                <img src="./images/office3.jpg" alt="">
                 <div class="card-text">
                     <h3>Analytics 360</h3>
                     <p>
-                        Our team of experts at Prodigy Agency work together to provide you with the catalyst your brand needs to succeed in today's market.
+                        Our team of experts at (Any) Agency work together to provide you with the catalyst your brand needs to succeed in today's market.
                     </p>
                     <a href="#">
                         Learn More
@@ -120,7 +120,7 @@
 
             <!-- card 3 -->
             <div class="card">
-                <img src="./image/office4.jpg" alt="">
+                <img src="./images/office4.jpg" alt="">
                 <div class="card-text">
                     <h3>Market Analytics</h3>
                     <p>
